# actix-web-rsvp

./: Cargo.toml  README.md  rsvp.csv
src/: csvdb.rs  email.rs  error.rs  lib.rs  main.rs  model.rs  state.rs
static/: form.html  styles.css
templates/: confirm.html  error.html  fetch.html  index.html  photos.html  rsvp.html
