[package]
name = "actix-web-rsvp"
version = "0.0.1"
authors = ["Jon Cinque <me@jonc.dev>"]
edition = "2021"

[dependencies]
actix-http = "2"
actix-web = "3"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
derive_more = "0.99"
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tinytemplate = "1.2"

[dev-dependencies]
actix-rt = "1"
tempfile = "3"
