[package]
name = "actix-web-rsvp"
version = "0.0.1"
authors = ["Jon Cinque <me@jonc.dev>"]
edition = "2021"
default-run = "actix-web-rsvp"

[dependencies]
actix-files = "0.6"
actix-http = "3"
actix-web = "4"
awc = "3"
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
csv = "1"
derive_more = "0.99"
env_logger = "0.9"
lettre = { version = "0.10.0-rc.4", features = ["builder", "sendmail-transport", "tokio1", "tokio1-native-tls"], default-features = false }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tinytemplate = "1.2"

[dev-dependencies]
actix-rt = "2"
